Perl - KNX Daemon (knxd) - ChangeLog
===============================
2013-02-17:
* Changed telnet/ebusd-handling from IO::Socket:INET to Net::Telnet to prevent memleaks
* added CYC (cyclic) support, usage: "cyc xxx xxx" 
* added sample knxd.csv ("knxd-ebus.csv")
* added log rotate settings /etc/logrotate.d/

2013-02-17:
* Initial release