@@ -1,5 +1,9 @@
 Perl - KNX Daemon (knxd) - ChangeLog
 ===============================
+2013-02-19:
+* bugfix: highload while eib=0 fixed
+* try to minimize memleaks in knxd and plugin
+
 2013-02-17:
 * Changed telnet/ebusd-handling from IO::Socket:INET to Net::Telnet to prevent memleaks
 * added CYC (cyclic) support, usage: "cyc xxx xxx" 
